<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Closet</string>
    <string name="action_settings">Settings</string>
    <string name="friend"> Friend</string>
    <string name="NoImage">No Image</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="addCloth">Add Cloth</string>
    <string name="addPant">Add Pant</string>
    <string name="addOther">Add Other</string>
    <string name="addCrop">Add Picture</string>
    <string name="title_activity_crop">CropActivity</string>
    <string name="title">Welcome to the Closet</string>
    <string name="name">Enter your name</string>
    <string name="email">Your Email Address</string>
    <string name="registration"> Registration</string>
    <string name="resetPassword"> Forgot Password?</string>
    <string name="send"> Send </string>
    <string name="logout"> Logout</string>
    <string name="gallery"> From Gallery</string>
    <string name="picture">Take Picture</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="shoe">Shoe</string>
    <string name="accessory">Accessory</string>
    <string name="showError">Invalid ID or Password</string>
    <string name= "errorField">Please fill out all the fields </string>
    <string name = "dialogTitle">Edit</string>
	<string name = "viewPassword">Password:</string>
	<string name = "viewName">Name:</string>
	<string name = "viewEmail">Email:</string>
	<string name = "changePassword">Change Password </string>
	<string name = "updateProfile">Update Profile</string>
	<string name = "tapEdit">Tap the text or picture to edit</string>

</resources>